# prose

./: .gitignore  Cargo.toml  ebnf.md  ebnf.txt  example.p  file.ts
.github/workflows/: ci.yml
ast/: Cargo.toml
ast/src/: lib.rs
block/: Cargo.toml
block/src/: lib.rs
docs/: project.yaml
e2e/: Cargo.toml
e2e/src/: main.rs
gslt/: Cargo.toml
gslt/src/: lib.rs
hash/src/: lib.rs
instr/: Cargo.toml
instr/src/: lib.rs
ir/: Cargo.toml
ir/src/: lib.rs
irssa/: Cargo.toml
lexeme/: Cargo.toml
lexeme/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
linker/src/: lib.rs
object/: Cargo.toml
object/src/: lib.rs
opcode/: Cargo.toml
opcode/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
perror/src/: lib.rs
slt/src/: lib.rs
ssa/src/: lib.rs
token/: Cargo.toml
token/src/: lib.rs
tokens/: Cargo.toml
tokens/src/: lib.rs
vm/: Cargo.toml
vm/src/: lib.rs
