[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
lexer = { path = "../lexer" }
token = { path = "../token" }
parser = { path = "../parser" }
gen = { path = "../gen" }
vm = { path = "../vm" }
ir = { path = "../ir" }
perror = { path = "../perror" }
