[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexeme = { path = "../lexeme" }
ast = { path = "../ast" }
logos = "0.12.0"
lexer = { path = "../lexer" }
tokens = { path = "../tokens" }
