[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
ast = { path = "../ast" }
lexer = { path = "../lexer" }
token = { path = "../token" }
perror = { path = "../perror" }
